[Fix] Add css to address issues with spacing and dropdown width (order)

--- a/evolute.css
+++ b/evolute.css
@@ -651,3 +651,22 @@ ul.leadstore_bullets{
     display: flex;
 }
 
+/* order creation seller vertical spacing*/
+.dashboard #settingsContainer .inputGroup {
+    margin: 10px 0 !important;
+}
+
+.dashboard .inputGroup{
+    padding: 0 !important;
+}
+
+.dashboard .formSectionContent{
+    gap: 10px;
+}
+
+/*     order creation date dropdown width     */
+.dashboard .proposal-settings-amt-dt:is(#endDateDiv, #startDateDiv) > select{
+    width: auto !important;
+    min-width: 250px !important;
+    max-width: unset !important;
+}
